Create a DataLoader and initialize model

--- a/C1M2_Assignment.ipynb
+++ b/C1M2_Assignment.ipynb
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -122,6 +122,48 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "deletable": false,
+        "editable": false,
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 327
+        },
+        "id": "s_TZhB_UGkEv",
+        "outputId": "c41879c7-c4ef-4ca1-ca62-e716f1abc302"
+      },
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'helper_utils'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-237458029.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mhelper_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0munittests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'helper_utils'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
+      "source": [
+        "import helper_utils\n",
+        "import unittests"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "!pip install dlai_grader"
       ],
@@ -129,8 +171,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "It8rNarKG44d",
-        "outputId": "7f133621-bcb1-4521-c417-e9e41ff7e344"
+        "id": "gbSlVLgUcj21",
+        "outputId": "32a4b9c6-b270-4f80-a31e-fc242490d7f9"
       },
       "execution_count": 2,
       "outputs": [
@@ -165,20 +207,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "deletable": false,
-        "editable": false,
-        "id": "s_TZhB_UGkEv"
-      },
-      "outputs": [],
-      "source": [
-        "import helper_utils\n",
-        "import unittests"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "88LJkF-6GkEv"
@@ -189,13 +217,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "PsVBO-XqGkEv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PsVBO-XqGkEv",
+        "outputId": "26873f5c-75a5-4600-ddbf-0e5c43344bcd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using Device: cpu\n"
+          ]
+        }
+      ],
       "source": [
         "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print(f\"Using Device: {DEVICE}\")"
@@ -232,13 +272,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "_J55sO6ZGkEv"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_J55sO6ZGkEv",
+        "outputId": "6eeccbc4-5a0d-457f-c01d-5b51a028e438"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "EMNIST Data folder not found locally. Downloading data.\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 562M/562M [00:02<00:00, 254MB/s]\n"
+          ]
+        }
+      ],
       "source": [
         "# Define the path where the EMNIST data will be stored\n",
         "data_path = './EMNIST_data'\n",
@@ -289,13 +349,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "8GyrEYK1GkEw"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 207
+        },
+        "id": "8GyrEYK1GkEw",
+        "outputId": "01f420ad-a14f-456e-ce21-529c19edde50"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'helper_utils' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3510948340.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# Extract the image and its label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mhelper_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisualize_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Display the image with its label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# The image is stored as a PIL Image object. You'll convert it to a tensor before training.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'helper_utils' is not defined"
+          ]
+        }
+      ],
       "source": [
         "index = 90000  # Pick an index from the training set\n",
         "\n",
@@ -485,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "deletable": false,
         "tags": [
@@ -516,21 +593,21 @@
         "    # Create a DataLoader for the training dataset\n",
         "    train_dataloader = torch.utils.data.DataLoader(\n",
         "        # Pass in the train_dataset\n",
-        "        __BLANK__,\n",
+        "        train_dataset,\n",
         "        # Set batch_size\n",
-        "        __BLANK__,\n",
+        "        batch_size = 64,\n",
         "        # Set shuffle\n",
-        "        __BLANK__\n",
+        "        shuffle= True\n",
         "    )\n",
         "\n",
         "    # Create a DataLoader for the testing dataset\n",
         "    test_dataloader = torch.utils.data.DataLoader(\n",
         "        # Pass in the test_dataset\n",
-        "        __BLANK__,\n",
+        "        test_dataset,\n",
         "        # Set batch_size\n",
-        "        __BLANK__,\n",
+        "        batch_size = 64,\n",
         "        # Set shuffle\n",
-        "        __BLANK__\n",
+        "        shuffle= False\n",
         "    )\n",
         "\n",
         "    ### END CODE HERE ###\n",
@@ -551,13 +628,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "T1dpJbkfGkEy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T1dpJbkfGkEy",
+        "outputId": "1c4de1e6-e34f-45b3-f58c-7260b3c4e8e7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Train Loader --- \n",
+            "\n",
+            "Total number of images in dataset: 124800\n",
+            "Total number of batches: 1950\n",
+            "--- Batch 1 ---\n",
+            "Data shape: torch.Size([64, 1, 28, 28])\n",
+            "Labels shape: torch.Size([64])\n",
+            "\n",
+            "--- Test Loader --- \n",
+            "\n",
+            "Total number of images in dataset: 20800\n",
+            "Total number of batches: 325\n",
+            "--- Batch 1 ---\n",
+            "Data shape: torch.Size([64, 1, 28, 28])\n",
+            "Labels shape: torch.Size([64])\n"
+          ]
+        }
+      ],
       "source": [
         "train_loader, test_loader = create_emnist_dataloaders(train_dataset, test_dataset, batch_size=64)\n",
         "\n",
@@ -595,13 +698,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "5-yKdkO3GkEy"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "id": "5-yKdkO3GkEy",
+        "outputId": "145604d7-e18a-401a-8839-8aa446b87189"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'unittests' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4228043395.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your code!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0munittests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexercise_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcreate_emnist_dataloaders\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'unittests' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Test your code!\n",
         "unittests.exercise_1(create_emnist_dataloaders)"
@@ -670,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "deletable": false,
         "tags": [
@@ -680,6 +800,7 @@
       },
       "outputs": [],
       "source": [
+        "from torch.nn.modules import linear\n",
         "# GRADED FUNCTION: initialize_emnist_model\n",
         "\n",
         "def initialize_emnist_model(num_classes=26):\n",
@@ -699,22 +820,23 @@
         "    ### START CODE HERE ###\n",
         "\n",
         "    # Define the neural network model using nn.Sequential\n",
-        "    model = __BLANK__(\n",
+        "    model = nn.Sequential(\n",
         "        # Flatten the input images\n",
-        "        __BLANK__,\n",
+        "        nn.Flatten(),\n",
         "        # Middle part should not have more than 5 layers. Only Linear and ReLU layers.\n",
         "        # Note: Hidden layer units should not exceed 256\n",
-        "        __BLANK__,\n",
+        "        nn.Linear(256,128),\n",
+        "        nn.ReLU(),\n",
         "        # Final Layer: SHOULD be Linear Layer\n",
         "        # Output layer with shape nn.Linear(valid inputs to the layer, num_classes outputs)\n",
-        "        __BLANK__,\n",
+        "        nn.linear(128,26),\n",
         "    )\n",
         "\n",
         "    # Define the loss function (Cross-Entropy Loss for multi-class classification)\n",
-        "    loss_function = __BLANK__\n",
+        "    loss_function = nn.CrossEntropyLoss()\n",
         "\n",
         "    # Define the optimizer (Adaptive Moment Estimation)\n",
-        "    optimizer = __BLANK__\n",
+        "    optimizer = optim.Adam(model = nn.parameter() , lr=0.001)\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
@@ -733,13 +855,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "zzrqTEESGkEz"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 326
+        },
+        "id": "zzrqTEESGkEz",
+        "outputId": "e452529b-dd42-4bed-9aa0-56bae66d1400"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "module 'torch.nn' has no attribute 'linear'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-502030207.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0myour_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minitialize_emnist_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_classes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m26\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Your model's architecture:\\n\\n{your_model}\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Your model's loss function: {loss_func}\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Your model's optimizer:\\n\\n{optimizer}\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-288863656.py\u001b[0m in \u001b[0;36minitialize_emnist_model\u001b[0;34m(num_classes)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;31m# Final Layer: SHOULD be Linear Layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0;31m# Output layer with shape nn.Linear(valid inputs to the layer, num_classes outputs)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m26\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     )\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'torch.nn' has no attribute 'linear'"
+          ]
+        }
+      ],
       "source": [
         "your_model, loss_func, optimizer = initialize_emnist_model(num_classes=26)\n",
         "\n",
@@ -789,13 +929,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "zX4qN3R6GkEz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zX4qN3R6GkEz",
+        "outputId": "4c70d31a-be7d-4379-8476-7e2583d381cd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[92m All tests passed!\n"
+          ]
+        }
+      ],
       "source": [
         "# Test your code!\n",
         "unittests.exercise_2(initialize_emnist_model)"
@@ -872,7 +1024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "deletable": false,
         "tags": [
@@ -996,13 +1148,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "a1fnrHEFGkE1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 207
+        },
+        "id": "a1fnrHEFGkE1",
+        "outputId": "4fbc7aaa-377a-4dd0-c6fb-70283257fc72"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'initialize_emnist_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1265699027.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### This will take a few seconds to execute\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_function\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minitialize_emnist_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_classes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m26\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m model_one_train_epoch, _ = train_epoch(model=model, # model\n\u001b[1;32m      5\u001b[0m                                        \u001b[0mloss_function\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mloss_function\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m# loss_function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'initialize_emnist_model' is not defined"
+          ]
+        }
+      ],
       "source": [
         "### This will take a few seconds to execute\n",
         "model, loss_function, optimizer = initialize_emnist_model(num_classes=26)\n",
@@ -1693,8 +1862,7 @@
   "metadata": {
     "grader_version": "1",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
